Overflow Fixing

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
 }
 
 /*what i do section*/
-.job {
+.job-section {
     margin: 0;
     padding: 0 230px 120px 230px;
 }
@@ -152,58 +152,73 @@ body {
     flex-direction: column;
 }
 
-.job__small-title {
+.section__small-title {
+    font-weight: 600;
     font-size: 36px;
-    margin: 18px;
+    line-height: 54px;
+    text-transform: uppercase;
+    margin: 0;
+    margin-bottom: 51px;
 }
 
 .professinal-skill {
     display: grid;
     grid-template-columns: 480px 480px;
-    column-gap: 70px;
+    column-gap: 20px;
+}
+
+.job-section__block {
+    background-color: #292C36;
+    border-radius: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 27px 24px 21px 24px;
+}
+
+.job-section__block {
+    background-color: #292C36 border-radius: 12px;
+}
+
+.block__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
 }
 
 .job__img {
     background-color: #38405A;
     padding: 12px;
     border-radius: 8px;
-}
-
-.design {
-    background-color: #292C36;
-    width: 480px;
-    border-radius: 12px;
-    padding: 24px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.front-end {
-    background-color: #292C36;
-    width: 480px;
-    border-radius: 12px;
-    padding: 24px;
-    display: flex;
-    flex-wrap: wrap;
+    margin-right: 16px;
 }
 
 .job__title {
-    margin-left: 16px;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+    margin: 0;
+}
+
+.block-text {
+    margin: 0;
+}
+
+.job__title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+    margin: 0;
 }
 
 /*portfolio section*/
 .portfolio {
-    position: relative;
-    margin-left: 130px;
-    margin-right: 130px;
-    top: 230px;
-    width: 1180px;
-    height: 406px;
-}
-
-.job__small-title {
-    font-size: 36px;
-    margin: 18px;
+    padding: 0 130px 120px 130px;
 }
 
 .projects {
@@ -211,75 +226,71 @@ body {
     justify-content: space-between;
 }
 
-.project__link {
+.project__link,
+.contact-me__link {
     background-color: #558FFF;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 18px;
-    padding-right: 18px;
+    padding: 10px 18px;
     text-decoration: none;
     color: white;
     border-radius: 6px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.1em;
 }
+
+.project__link {}
 
 .project-card {
     background-color: #292C36;
     border-radius: 12px;
+    display: flex;
+    flex-direction: column;
 }
 
 .project-card-text {
-    padding-left: 24px;
-    padding-top: 20px;
-    padding-bottom: 24px;
+    padding: 20px 24px 30px 24px;
+    background-color: #292C36;
+    border-radius: 12px;
 }
 
+
 .project__title {
-    margin-top: -15px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    margin-bottom: 25px;
 }
 
 
 /*contact-me secion*/
-.contact-me {
-    position: relative;
-    background-color: #292C36;
-    border-radius: 12px;
-    width: 980px;
-    height: 277px;
-    left: 230px;
-    right: 230px;
-    top: 450px;
+
+.contacts {
+    padding: 0 230px 120px 230px;
 }
 
-.contact {
+.contact-me {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 58px;
-    padding-left: 274px;
-    padding-right: 274px;
-    padding-bottom: 88px;
+    padding: 78px 274px;
+    background-color: #292C36;
+    border-radius: 12px;
 }
 
 .contact-me__text {
+    font-weight: 600;
     font-size: 32px;
-}
-
-.contact-me__link {
-    background-color: #558FFF;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 18px;
-    padding-right: 18px;
-    text-decoration: none;
-    color: white;
-    border-radius: 6px;
+    line-height: 48px;
+    margin: 0;
+    margin-bottom: 32px;
 }
 
 /*footer*/
 .page-footer {
-    position: relative;
-
+    padding: 44px 500px 32px 582px;
     background-color: #292C36;
 }
 
@@ -288,5 +299,15 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 44px;
+}
+
+.footer-logo {
+    margin-bottom: 16px;
+}
+
+.footer-copyright {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0;
 }
